amedpal/index/static/CSS/index.css
/* BASIC */

body {
    font-family: 'Montserrat', sans-serif;
    color: #282828;
    line-height: 1.6;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
}

h1, h2, h3, h4 {
    line-height: 1.2;
}

h1 {
    font-size: 3em;
    font-family: 'Montserrat', sans-serif;
}

.hello, .articulos, .clientes {
    margin-top:100px;
}

.box {
    margin-bottom: 20px;
    padding: 20px;
    border-radius: 5px;
    transition: all 0.3s ease;
    -webkit-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.1);
    -moz-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.1);
    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.1);
}

.box:hover {
    margin-bottom: 20px;
    padding: 20px;
    border-radius: 5px;
    -webkit-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.2);
    -moz-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.2);
    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.2);
}



.article-box {
    line-height: 1.6;
    padding: 10px;
    border-radius: 5px;
    margin-bottom: 5px;
    transition: all 0.3s ease;
    
}

.article-box:hover {
    background-color: #dfdfdf60;
}


.index-paragraph {
    margin-top: 25px;
    font-size: 1em;
    font-family: 'Montserrat', sans-serif;
    line-height: 30px;
}

.bg-white {
    background-color: white;
}

.navbar-nav .nav-item .nav-link {
    color: #282828;
}

.footer {
    padding: 25px;
    margin-top: 100px;
    color: #b9b9b9;
}

.fill-box {
    color: #282828;
    display: block;
    height: 100%;
    width: 100%;
    text-decoration: none;
}

.fill-box:hover {
    color: #404040;
    text-decoration: none;
}

.small {
    font-size: 0.5em;
}

/* BLOG */
.paragraph {
    margin-bottom: 1.5em;
    color: black;
    text-align: justify;
}

.table-scroll {
    overflow-x: auto;
    overflow-y: auto;
    white-space: nowrap;
}

@media (min-width: 992px) {
    pre {
        width: 75%;
        margin-left: 140px;
    }

    .paragraph {
        padding-right: 150px;
        padding-left: 150px;
    }

    .title {
        padding-left: 150px;
    }

    .list {
        padding-left: 250px;
    }
}

@media (max-width:480px) and (min-width:320px) {
    pre {
        font-size: 0.95em;
    }
}

/* desert scheme ported from vim to google prettify */
pre.prettyprint { display: block; background-color: #333 }
pre .nocode { background-color: none; color: #000 }
pre .str { color: #ffa0a0 } /* string  - pink */
pre .kwd { color: #f0e68c; font-weight: bold }
pre .com { color: #87ceeb } /* comment - skyblue */
pre .typ { color: #98fb98 } /* type    - lightgreen */
pre .lit { color: #cd5c5c } /* literal - darkred */
pre .pun { color: #fff }    /* punctuation */
pre .pln { color: #fff }    /* plaintext */
pre .tag { color: #f0e68c; font-weight: bold } /* html/xml tag    - lightyellow */
pre .atn { color: #bdb76b; font-weight: bold } /* attribute name  - khaki */
pre .atv { color: #ffa0a0 } /* attribute value - pink */
pre .dec { color: #98fb98 } /* decimal         - lightgreen */

/* Specify class=linenums on a pre to get line numbering */
ol.linenums { margin-top: 0; margin-bottom: 0; color: #AEAEAE } /* IE indents via margin-left */
li.L0,li.L1,li.L2,li.L3,li.L5,li.L6,li.L7,li.L8 { list-style-type: none }
/* Alternate shading for lines */

@media print {
  pre.prettyprint { background-color: none }
  pre .str, code .str { color: #060 }
  pre .kwd, code .kwd { color: #006; font-weight: bold }
  pre .com, code .com { color: #600; font-style: italic }
  pre .typ, code .typ { color: #404; font-weight: bold }
  pre .lit, code .lit { color: #044 }
  pre .pun, code .pun { color: #440 }
  pre .pln, code .pln { color: #000 }
  pre .tag, code .tag { color: #006; font-weight: bold }
  pre .atn, code .atn { color: #404 }
  pre .atv, code .atv { color: #060 }
}

